added commit with shortcut

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <h1>Classic Cup</h1>
             <p>Indulge in heaven with our freshly brewed coffee!</p>
 
-        </article>
+        <!--article*3>img>h3>p  this is a great shortcut for nestig child element-->
+        <!--article*3+img+h3+p adding sibling elemets -->
     </main>
 </body>
 <footer>
