--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
         <img src="https://thumbs.dreamstime.com/b/single-coffee-bean-isolated-white-background-6953573.jpg" id="logo">
 
         <ul>
-            <a href="http://www.example.com">Codees Coffee</a>
+            <a href="http://www.example.com">Coffee</a>
 
-            <a href="http://www.example.com">Codees Cafe</a>
-
-            <a href="http://www.example.com">Cart</a>
-
+            <a href="http://www.example.com">Food</a>
+    
+            <a href="https://lindseyshepard.github.io/learning-journal-repo/lets-JavaScript"><b>Click Me I work</b></a>
         </ul>
-
 
     </header>
     <main>
-        <div>
+    <script src="js/add-content.js">document.write('Inspect and check the console!');
+console.log('HEHEHEHEHE hi.');
+    </script><br>
+   
+
             <article id="ice-coffee">
                 <img src="http://1.bp.blogspot.com/-UV9fcFYETGc/ThYLf-46zMI/AAAAAAAAEXI/3FgR0-Y4ypg/s1600/coffee4.JPG">
                 <h1>Ice Coffee</h1>
                 <p>Come try an amazing cup of our ice coffee</p>
+               <!----<button id="ice">Order an Ice Coffee Here</button> -->
 
             </article>
             <article id="ice-lattee">
@@ -36,6 +39,7 @@
                 <p>
                     Pumpkin spice and everything nice. Best lattee of your day!
                 </p>
+                <!--<button id="lattee">Order an Ice Lattee Here</button> -->
 
             </article>
             <article id="hot-coffee">
@@ -43,18 +47,21 @@
                     src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/58324-iStock-157528129.jpg?itok=kihwEBm5">
                 <h1>Classic Cup</h1>
                 <p>Indulge in heaven with our freshly brewed coffee!</p>
+               <!---- <button id="hot">Order a Hot Coffee Here</button> -->
 
                 <!--article*3>img>h3>p  this is a great shortcut for nestig child element-->
                 <!--article*3+img+h3+p adding sibling elemets -->
-        </div>
+            </article>
+    
     </main>
 </body>
 <footer id="footer">
 
+    <img src="https://thumbs.dreamstime.com/b/single-coffee-bean-isolated-white-background-6953573.jpg" id="logo">
     <ul>
-        <a href="http://www.example.com">Codees Coffee</a>
+        <a href="http://www.example.com">Coffee</a>
 
-        <a href="http://www.example.com">Codees Cafe</a>
+        <a href="http://www.example.com">Food</a>
 
         <a href="http://www.example.com">Cart</a>
 
