--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     </header>
     <main>
-    <script src="js/add-content.js">document.write('Inspect and check the console!');
-console.log('HEHEHEHEHE hi.');
-    </script><br>
+    <br>
    
 
             <article id="ice-coffee">
@@ -54,6 +52,9 @@ console.log('HEHEHEHEHE hi.');
             </article>
     
     </main>
+    <script src="js/add-content.js">document.write(userInput(confirm()));
+
+    </script>
 </body>
 <footer id="footer">
 
