--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </article>
     
     </main>
-    <script src="js/add-content.js">document.write(userInput(confirm()));
+    <script src="js/add-content.js">document.write(userInput());
 
     </script>
 </body>
