loops and fixing src

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     
             <a href="https://lindseyshepard.github.io/learning-journal-repo/lets-JavaScript"><b>Click Me I work</b></a>
         </ul>
-        <script src="js/add-content.js">document.write(userInput());
-
-        </script>
+        <script src="js/add-content.js"></script>
     </header>
     <main>
     <br>
