logic for loops

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <script src="js/add-content.js"></script>
 </head>
 
 <body>
     <header>
+        <script>document.write( ask() )</script>
         <img src="https://thumbs.dreamstime.com/b/single-coffee-bean-isolated-white-background-6953573.jpg" id="logo">
 
         <ul>
@@ -18,7 +20,6 @@
     
             <a href="https://lindseyshepard.github.io/learning-journal-repo/lets-JavaScript"><b>Click Me I work</b></a>
         </ul>
-        <script src="js/add-content.js"></script>
     </header>
     <main>
     <br>
